--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -18,8 +23,9 @@ body {
 .container {
     width: 1100px;
     display: flex;
+    gap: 1em;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .container .box {
